deploy/production/base/prerequisites.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinelops-system
  labels:
    app.kubernetes.io/part-of: sentinelops
